Bug 8884: (follow-up) rearrange placement of the top-bar div in CCSR
This patch makes it easier to avoid having the top bar
overlap other OPAC page content (particularly custom
header content set via the opacheader system preference).

This is done by moving the top-nav div outside of the
main doc3 div and adjusting the CSS accordingly.  Yes,
this does end up having top-nav.inc be included from
opac-bottom.inc, but it would require touching rather
more templates to have it be included immediately after
the <body> tag.

This patch also removes a duplicate instance of the
cmspan span.

To test:

[1] Change to the CCSR OPAC theme.
[2] Before applying the patch, open a set of OPAC
    pages (e.g., main page, user page, search results, bib
    details) in your web browser.
[3] Apply the patch, and open the same OPAC pages in separate
    tabs.  Comparing the pre- and post- version of each page
    to verify that the placement
[4] Add an OpAC header using the opacheader system preference.
[5] Verify that the header is displayed without overlapping
    the top bar.

(cherry picked from commit 33c12cf39588aa022eacaa0bca403c373a6bf8d5)

--- a/koha-tmpl/opac-tmpl/ccsr/en/css/colors.css
+++ b/koha-tmpl/opac-tmpl/ccsr/en/css/colors.css
@@ -60,7 +60,6 @@ a:hover {
     background: none;
     border: none;
     display: table;
-    margin: 40px 0 0 !important;
     padding: 0.7em 0 0 0.5em;
     width: 100%;
 }
