--- a/koha-tmpl/opac-tmpl/ccsr/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/ccsr/en/css/opac.css
@@ -1,6 +1,10 @@
 @import url("../../../lib/yui/reset-fonts-grids.css");
 @import url("../../../lib/yui/skin.css");
 
+#doc3 {
+    padding-top: 35px;
+}
+
 a {
       font-weight : bold;
 }
